--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:mysql://localhost:3306/tutores?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=
+spring.datasource.password=
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
 
