--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://localhost:3306/tutores?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=developer
+spring.datasource.password=leticia12@
 spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 
